--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
   "homepage": "https://github.com/vdiez/simple_wamp#readme",
   "dependencies": {
     "autobahn": "^18.10.2",
-    "winston": "*"
+    "winston": "^3.2.1"
   }
 }
