--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/vdiez/simple_wamp#readme",
   "dependencies": {
-    "autobahn": "^20.9.2"
+    "autobahn": "^20.9.2",
+    "ws": "^7.5.4"
   }
 }
