--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
   "dependencies": {
     "autobahn": "^20.9.2",
     "ws": "^7.5.4"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1"
   }
 }
